<resources>
    <string name="app_name">SnapMagic</string>
    <string name="lb_dev">Developer</string>

    <!-- Content screen welcome -->
    <string name="lb_title_1">Welcome to App Editor!</string>
    <string name="lb_desc_1">Discover a powerful creative tool that helps you turn ideas into reality.</string>
    <string name="lb_title_2">The Power of App Editor</string>
    <string name="lb_desc_2">Create, edit, and manage your projects with an intuitive interface.</string>
    <string name="lb_title_3">Collaborate and Share</string>
    <string name="lb_desc_3">Work effectively with your team, share your creations, and get instant feedback.</string>
    <string name="lb_next">Next</string>
    <string name="lb_prev">Prev</string>
    <string name="lb_skip">Skip</string>
    <string name="lb_start">Get Started</string>
    <string name="lb_made_by">Made by&#160;</string>
    <string name="lb_made_author">Phu Nhuan.</string>

    <!-- Content Toasts -->
    <string name="toast_save_success">Save success</string>
    <string name="toast_save_fail">Save fail</string>
    <string name="toast_load_fail">Load fail</string>

    <!--Content fragment home-->
    <string name="lb_features">Features</string>
    <string name="feature_edited_photos">Edited Photos</string>
    <string name="lb_view_all">View all</string>

    <!--String layout permission-->
    <string name="lb_permission_granted">Permission Granted</string>
    <string name="lb_storage_permission">Storage Permission</string>
    <string name="lb_camera_permission">Camera Permission</string>
    <string name="lb_message_permission_gallery">This app requires storage permission to access your photos and videos.</string>
    <string name="lb_message_permission_camera">This app requires camera permission to take photos.</string>
    <string name="lb_allow">Allow</string>
    <string name="lb_cancel">Cancel</string>
    <string name="lb_ok">Ok</string>
    <string name="lb_permission_denied">Permission Denied. Please enable it in settings.</string>
    <string name="lb_setting">Settings</string>

    <!--String preview-->
    <string name="lb_edit">Edit</string>
    <string name="lb_preview">Preview</string>

    <!--String tools-->
    <string name="lb_edit_photo">Edit Photo</string>
    <string name="lb_make_collage">Make a Collage</string>
    <string name="lb_background">Remove Background</string>
    <string name="lb_premium">Premium</string>
    <string name="lb_camera">Camera</string>
    <string name="lb_album">Album Photo</string>
    <string name="lb_feature_text">Enter Text</string>
    <string name="lb_enter_text">Enter your text…</string>

    <!--Dialog-->
    <string name="lb_notification">Notification</string>
    <string name="lb_confirm">Confirm</string>
    <string name="lb_out_confirm">Are you sure exit ? </string>
    <string name="lb_save_confirm">Are you sure save ? </string>

    <!--Feature name-->
    <string name="lb_crop">Crop</string>
    <string name="lb_frame">Frame</string>
    <string name="lb_filter">Filter</string>
    <string name="lb_sticker">Sticker</string>
    <string name="lb_text">Text</string>
    <string name="lb_draw">Draw</string>
    <string name="lb_eraser">Eraser</string>

    <!--Picker-->
    <string name="lb_size_default">Size: 50</string>
    <string name="lb_size">Size: </string>
    <string name="lb_choose_size">Choose size</string>
    <string name="lb_choose_color">Choose color</string>

    <string name="lb_delete_image">Image Deleted</string>
    <string name="lb_delete_fail">Image delete fail</string>
    <string name="lb_select_text">Select outside the area or the text</string>

    <string name="lb_language">Language</string>
    <string name="lb_please_select_language">Please select language</string>

    <string name="lb_title_unlimited">UNLIMITED</string>
    <string name="lb_title_access">ACCESS</string>

    <string name="lb_weekly">Weekly</string>
    <string name="lb_sub_weekly_price">$15.9</string>
    <string name="lb_desc_weekly">Unlimited stickers premium features</string>
    <string name="lb_yearly">Yearly</string>
    <string name="lb_sub_yearly_price">$40.8</string>
    <string name="lb_desc_yearly">Best value! Save more with weekly plan</string>
    <string name="lb_lifetime">Lifetime</string>
    <string name="lb_sub_lifetime_price">$55.1</string>
    <string name="lb_desc_lifetime">Pay once, enjoy forever with no ads</string>
    <string name="lb_continue">Continue</string>

    <string name="lb_sticker_basic">Basic</string>
    <string name="lb_sticker_festival">Festival</string>
    <string name="lb_sticker_creative">Creative</string>
    <string name="lb_interact">Interact: %1$d</string>

    <string name="lb_user_online">User Online %1$d</string>

    <string name="lb_analytics">Analytics</string>
    <string name="lb_loading_ad">Loading Ad...</string>
    <string name="banner_native_ad" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="banner_app_open" translatable="false">ca-app-pub-3940256099942544/9257395921</string>
    <string name="banner_adaptive" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="banner_collapsible" translatable="false">ca-app-pub-3940256099942544/2014213617</string>
    <string name="banner_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="lb_toast_purchase_success">Purchase success</string>
    <string name="lb_toast_purchase_fail">Purchase fail</string>
    <string name="lb_toast_purchase_cancel">Purchase cancel</string>
    <string name="lb_toast_purchase_error">Purchase error</string>
    <string name="lb_toast_purchase_disconnect">Purchase disconnect</string>
    <string name="lb_toast_purchase_already_purchased">Already purchased</string>
    <string name="lb_toast_purchase_not_ready">Not ready</string>
    <string name="lb_toast_network_connected">Network connected</string>
    <string name="lb_toast_network_error">No network connection, please try again</string>

    <string name="lb_premium_celebration">Congratulations!</string>
    <string name="lb_upgrade_package_success">Upgrade package success</string>

    <string name="lb_move_purchased">Move to purchased success</string>
    <string name="lb_package_premium">Premium</string>
    <string name="lb_package_plus">Plus</string>
    <string name="lb_package_basic">Basic</string>
    <string name="lb_desc_policy">Yearly Plan will auto renew after 1 year, unless you cancel your subscription plan.</string>
    <string name="lb_policy">Privacy Policy</string>
    <string name="lb_terms">Terms of Service</string>
    <string name="lb_error">Error while downloading</string>

    <!-- Tool titles -->
    <string name="tool_crop">Crop</string>
    <string name="tool_frame">Add frame</string>
    <string name="tool_sticker">Sticker</string>
    <string name="tool_filter">Filter</string>
    <string name="tool_text">Text</string>
    <string name="tool_draw">Draw</string>

    <!-- Tool descriptions -->
    <string name="desc_crop">Crop the image as you like</string>
    <string name="desc_frame">Add a frame to your photo</string>
    <string name="desc_sticker">Insert funny stickers</string>
    <string name="desc_filter">Apply color filters</string>
    <string name="desc_text">Add or edit text</string>
    <string name="desc_draw">Draw freely on the image</string>

    <string name="lb_add_image">Select image</string>
    <string name="lb_select_image">Please select image</string>
    <string name="lb_remove_background">Please remove Background</string>
    <string name="lb_error_remove_bgr">Error when removing background</string>

    <string name="lb_delete">Delete</string>
    <string name="lb_restore">Restore</string>
    <string name="lb_zoom">Zoom</string>
    <string name="lb_size_eraser">Size</string>
    <string name="lb_compensate">Compensate</string>
</resources>