<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_purchase"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_152"
            android:scaleType="centerCrop"
            android:src="@drawable/img_fea_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_unlimited"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:gravity="center"
            android:text="@string/lb_title_unlimited"
            android:textSize="@dimen/font_24"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_purchase"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_title_access"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lb_title_access"
            android:textSize="@dimen/font_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_unlimited"
            tools:ignore="SpUsage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_life_premium"
            android:layout_width="@dimen/dimen_152"
            android:layout_height="@dimen/dimen_176"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@drawable/bg_border_purchase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_access">

            <TextView
                android:id="@+id/tv_discount_badge"
                android:layout_width="@dimen/dimen_72"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_package_badge_lifetime"
                android:gravity="center"
                android:padding="@dimen/dimen_6"
                android:text="@string/lb_package_premium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_12"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <RadioButton
                android:id="@+id/btn_check_life"
                android:layout_width="@dimen/dimen_26"
                android:layout_height="@dimen/dimen_26"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginEnd="@dimen/dimen_10"
                android:background="@drawable/selector_checkbox"
                android:button="@null"
                android:padding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_package_life_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lb_lifetime"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_check_life"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_life_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lb_sub_lifetime_price"
                android:textColor="@color/sky_300"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_package_life_time"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_desc_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_12"
                android:paddingHorizontal="@dimen/dimen_10"
                android:text="@string/lb_desc_lifetime"
                android:textAlignment="center"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_life_price" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_package_weekly"
            android:layout_width="@dimen/dimen_140"
            android:layout_height="@dimen/dimen_152"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/bg_border_purchase"
            app:layout_constraintEnd_toStartOf="@id/ly_package_yearly"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_life_premium">

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="@dimen/dimen_72"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_package_badge_weekly"
                android:gravity="center"
                android:padding="@dimen/dimen_6"
                android:text="@string/lb_package_basic"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_12"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <RadioButton
                android:id="@+id/btn_check_weekly"
                android:layout_width="@dimen/dimen_26"
                android:layout_height="@dimen/dimen_26"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginEnd="@dimen/dimen_10"
                android:background="@drawable/selector_checkbox"
                android:button="@null"
                android:checked="true"
                android:padding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lb_weekly"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_check_weekly"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_free_trial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_sub_weekly_price"
                android:textColor="@color/sky_300"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_free"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_desc_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_12"
                android:paddingHorizontal="@dimen/dimen_10"
                android:text="@string/lb_desc_weekly"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_free_trial"
                tools:ignore="SpUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ly_package_yearly"
            android:layout_width="@dimen/dimen_140"
            android:layout_height="@dimen/dimen_152"
            android:background="@drawable/bg_border_purchase"
            app:layout_constraintBottom_toBottomOf="@+id/ly_package_weekly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ly_package_weekly"
            app:layout_constraintTop_toTopOf="@id/ly_package_weekly">

            <TextView
                android:id="@+id/tv_discount_badge_yearly"
                android:layout_width="@dimen/dimen_72"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_package_badge_yearly"
                android:gravity="center"
                android:padding="@dimen/dimen_6"
                android:text="@string/lb_package_plus"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_12"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <RadioButton
                android:id="@+id/btn_check_yearly"
                android:layout_width="@dimen/dimen_26"
                android:layout_height="@dimen/dimen_26"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginEnd="@dimen/dimen_10"
                android:background="@drawable/selector_checkbox"
                android:button="@null"
                android:padding="@dimen/dimen_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_yearly"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_check_yearly"
                tools:ignore="HardcodedText,SpUsage" />

            <TextView
                android:id="@+id/tv_fee_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_sub_yearly_price"
                android:textColor="@color/sky_300"
                android:textSize="@dimen/font_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fee"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_desc_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_12"
                android:paddingHorizontal="@dimen/dimen_10"
                android:text="@string/lb_desc_yearly"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fee_"
                tools:ignore="SpUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btn_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_package_yearly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:backgroundTint="@color/sky_300"
            android:padding="@dimen/dimen_16"
            android:text="@string/lb_continue"
            app:cornerRadius="@dimen/dimen_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_package_yearly"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tv_subscription_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_16"
            android:paddingVertical="@dimen/dimen_8"
            android:text="@string/lb_desc_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            app:layout_constraintBottom_toTopOf="@+id/ly_policy"
            app:layout_constraintTop_toBottomOf="@id/btn_continue"
            tools:ignore="SpUsage" />

        <RelativeLayout
            android:id="@+id/ly_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dimen_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subscription_info">

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/lb_policy"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_terms_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/lb_terms"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btn_close_overlay"
        android:layout_width="@dimen/dimen_28"
        android:layout_height="@dimen/dimen_28"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:src="@mipmap/ic_close"
        android:tint="@color/white"
        android:visibility="gone"
        tools:ignore="ContentDescription,UseAppTint" />

</FrameLayout>

