<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10">

    <ImageView
        android:id="@+id/btnCloseCelebrate"
        android:layout_width="@dimen/dimen_24"
        android:layout_height="@dimen/dimen_24"
        android:layout_gravity="right"
        android:src="@mipmap/ic_close"
        android:tint="@color/white"
        tools:ignore="ContentDescription,RtlHardcoded,UseAppTint" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_8"
        android:gravity="center"
        android:text="@string/lb_premium_celebration"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_20"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20"
        android:text="@string/lb_upgrade_package_success"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        tools:ignore="SpUsage" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/dimen_152"
        android:layout_height="@dimen/dimen_152"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/premium" />

    <TextView
        android:id="@+id/btn_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_4"
        android:text="@string/lb_move_purchased"
        android:textColor="@color/blue_grey_50"
        android:textStyle="bold" />

</LinearLayout>
